--- a/src/component/User/Form.css
+++ b/src/component/User/Form.css
@@ -31,6 +31,15 @@
     cursor: pointer;
     font: 500 1.5vmax "Roboto";
   }
+
+  .change{
+    background-color: transparent;
+    font-weight: 0;
+  }
+
+  .change:hover{
+    text-decoration: underline;
+  }
   
   a {
     margin-top: 10px;
